--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "bin": {
-    "dawar-guessing-game": "/index.js"
+    "dawar-atm": "/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
